Create an initial structure for the page

--- a/src/template.html
+++ b/src/template.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= htmlWebpackPlugin.options.title %>></title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-    
+    <header>
+        <div class="logo">Logo</div>
+        <nav>
+            <ul>
+                <li id="home">Home</li>
+                <li id="menu">Menu</li>
+                <li id="contacts">Contacts</li>
+            </ul>
+        </nav>
+    </header>
+    <div id="content">
+        <div class="top-section">
+            <div>
+                <p>Restaurant Page</p>
+                <p>Welcome to the reastaurant page</p>
+            </div>
+        </div>
+        <div class="item">
+            <div class="item-text-section">
+                <div>Sushi</div>
+                <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
+            </div>
+            <div class="item-img-section"></div>
+        </div>
+    </div>
+    <footer>
+        <p>Footer text</p>
+    </footer>
 </body>
 </html>
